<resources>
    <string name="app_name">Roulette</string>
    <string name="settings">SETTINGS</string>
    <string name="betting_currency">Betting Currency</string>
    <string name="betting_amount">Betting Amount</string>
    <string name="reset_data">Reset Data</string>
    <string name="ok">OK</string>
    <string name="gain">Gain:</string>
    <string name="divider">|</string>
    <string name="sessions">Sessions:</string>
    <string name="profit">Profit:</string>
    <string name="bet">Bet</string>
    <string name="on">on</string>
    <string name="i_won">I Won</string>
    <string name="i_lost">I Lost</string>
    <string name="draw_over_other_app_permission_not_available">Draw over other app permission not available. Closing the application</string>
    <string name="betting_box_black">Black</string>
    <string name="betting_box_red">Red</string>
    <string name="betting_box_even">Even</string>
    <string name="betting_box_odd">Odd</string>
    <string name="betting_box_1_to_18">1-18</string>
    <string name="betting_box_19_to_36">19-36</string>
    <string name="resetting">Resetting</string>
    <string name="please_enter_betting_amount">Please enter betting amount</string>
    <string name="please_enter_amount_greater_than">Please enter amount greater than 0</string>
    <string name="session_completed">Session completed</string>
</resources>
